@@ -9,6 +9,7 @@ python:
   - 2.7
 
 env:
+  - DJANGO="Django>=2.0,<2.1"
   - DJANGO="Django>=1.11,<1.12"
   - DJANGO="Django>=1.10,<1.11"
   - DJANGO="Django>=1.9,<1.10"
@@ -29,6 +30,9 @@ matrix:
 
    - python: 3.5
      env: DJANGO="Django>=1.7,<1.8"
+
+   - python: 2.7
+     env: DJANGO="Django>=2.0,<2.1"
 
 
 after_success:
