@@ -34,7 +34,7 @@ class Migration(migrations.Migration):
                 ('time_created', models.DateTimeField(auto_now_add=True, verbose_name='Date created')),
                 ('time_accepted', models.DateTimeField(verbose_name='Date accepted', null=True, editable=False)),
                 ('expired', models.BooleanField(default=False, help_text="Expired codes couldn't be used for repeated account activations.", db_index=True, verbose_name='Expired')),
-                ('user', models.ForeignKey(verbose_name='User', to=settings.AUTH_USER_MODEL)),
+                ('user', models.ForeignKey(verbose_name='User', to=settings.AUTH_USER_MODEL, on_delete=models.CASCADE)),
             ],
             options={
                 'verbose_name': 'Activation code',
@@ -50,8 +50,8 @@ class Migration(migrations.Migration):
                 ('time_created', models.DateTimeField(auto_now_add=True, verbose_name='Date created')),
                 ('time_accepted', models.DateTimeField(verbose_name='Date accepted', null=True, editable=False)),
                 ('expired', models.BooleanField(default=False, help_text="Visitors won't be able to sign up with an expired code.", db_index=True, verbose_name='Expired')),
-                ('acceptor', models.ForeignKey(related_name='acceptors', blank=True, editable=False, to=settings.AUTH_USER_MODEL, null=True, verbose_name='Acceptor')),
-                ('creator', models.ForeignKey(related_name='creators', verbose_name='Creator', to=settings.AUTH_USER_MODEL)),
+                ('acceptor', models.ForeignKey(related_name='acceptors', blank=True, editable=False, to=settings.AUTH_USER_MODEL, null=True, verbose_name='Acceptor', on_delete=models.CASCADE)),
+                ('creator', models.ForeignKey(related_name='creators', verbose_name='Creator', to=settings.AUTH_USER_MODEL, on_delete=models.CASCADE)),
             ],
             options={
                 'verbose_name': 'Invitation code',
